Using correctly http status code.
